# matrix-cam

./: .gitignore  README.md  pyproject.toml
ascii_cam/: ascii_renderer.py  prototype.py  segmentation.py  ui.py
matrix_cam/: camera.py  main.py  ui.py
tests/: test_ascii_renderer.py  test_main_cli.py  test_segmentation.py
